--- a/scss/pages.scss/phones.scss/_phones.scss
+++ b/scss/pages.scss/phones.scss/_phones.scss
@@ -8,6 +8,11 @@
 
             img {
                 max-width: 550px;
+                transition: all 0.3s ease;
+            }
+
+            img:hover {
+                transform: scale(1.1)
             }
 
         }
@@ -217,11 +222,16 @@
                         height: 50px;
                         margin: 10px;
                         padding: 10px;
+                        transition: all 0.3s ease;
                     }
     
 
                     .bog {
                         background-color: #ff600a;
+                    }
+
+                    img:hover {
+                        transform: scale(1.1)
                     }
                 }
             }
@@ -278,7 +288,7 @@
                     .img-div {
                         border: 2px solid #dedede !important;
                         border-radius: 3px !important;
-                        padding: 4px;
+                        padding: 4px 4px 0px;
                         margin: 0px 25px 0px 0px;
 
                         img {
