--- a/scss/pages.scss/_index.scss
+++ b/scss/pages.scss/_index.scss
@@ -1,6 +1,6 @@
 body {
     @extend %my-container;
-    background-color: #ffffff;
+    background-color: #fafafa !important;
   
    .wrap {
     max-width: 1200px;
