--- a/css/styles.css
+++ b/css/styles.css
@@ -185,6 +185,9 @@ body .wrap {
   border-radius: 30px;
   width: 290px;
 }
+.header .bottom form input:focus {
+  outline: none;
+}
 .header .bottom form button {
   position: absolute;
   background-color: #8e03a4;
@@ -305,6 +308,10 @@ body .wrap {
 .header .responsive-header .search .search-icon {
   font-size: 18px;
   color: #333333;
+  transition: all 0.25s linear;
+}
+.header .responsive-header .search .search-icon:hover {
+  transform: scale(1.1);
 }
 
 .mobile-nav {
@@ -317,7 +324,7 @@ body .wrap {
   z-index: 98;
   background-color: white;
   padding-top: 70px;
-  transition: 0.5s;
+  transition: all 0.5s ease;
 }
 .mobile-nav a {
   display: flex;
@@ -474,6 +481,10 @@ body .wrap {
 }
 .footer .footer-image img {
   height: 55px;
+  transition: all 0.25s ease;
+}
+.footer .footer-image img:hover {
+  transform: scale(1.03);
 }
 .footer .footer-location p {
   color: #929292;
@@ -482,16 +493,7 @@ body .wrap {
 }
 
 .scroll-on-top {
-  position: fixed;
-  right: 12px;
-  bottom: 12px;
-  width: 45px;
-  height: 45px;
-  border-radius: 50%;
-  background-color: rgba(255, 255, 255, 0.9);
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.17);
   color: #333;
-  text-align: center;
   font-size: 0;
   transition: all 1s ease;
 }
@@ -504,6 +506,27 @@ body .wrap {
 
 .scroll-on-top:hover i {
   transform: scale(1.15);
+}
+
+.scroll-button {
+  position: fixed;
+  right: -50px;
+  bottom: 12px;
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.9);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.17);
+  text-align: center;
+  transition: all 0.3s ease;
+}
+
+.scroll-button.is-scrolling {
+  right: 12px;
+}
+
+.scroll-button:hover {
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 }
 
 .about-us-main article {
