--- a/scss/pages.scss/_contact.scss
+++ b/scss/pages.scss/_contact.scss
@@ -6,15 +6,23 @@
         padding: 0px 20px;
 
 
+
+
         @media (max-width: 800px) {
             flex-direction: column;
-            align-items: flex-start;
+            align-items: center;
         }
     }
 
     .left {
         min-width: 350px;
         padding: 0px 20px;
+
+        @media (max-width: 800px) {
+            text-align: center;
+        }
+
+
         .text {
 
             h1 {
