--- a/css/styles.css
+++ b/css/styles.css
@@ -883,14 +883,14 @@ body .wrap {
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
 }
 .phones-main .section1 .phones-carousel {
   max-width: 550px;
   width: 100%;
 }
 .phones-main .section1 .phones-carousel img {
-  max-width: 500px;
+  max-width: 450px;
   width: 100%;
   transition: all 0.3s ease;
 }
@@ -1114,6 +1114,28 @@ body .wrap {
 }
 .phones-main .section1 .phones-information .payment .payment-images img:hover {
   transform: scale(1.1);
+}
+@media (max-width: 1000px) {
+  .phones-main .section1 {
+    flex-wrap: wrap;
+  }
+  .phones-main .phones-carousel {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  .phones-main .phones-carousel img {
+    margin-top: 70px;
+  }
+  .phones-main .phones-information {
+    justify-content: space-evenly !important;
+    align-items: center !important;
+  }
+  .phones-main p {
+    text-align: center;
+  }
 }
 .phones-main .section2 {
   display: flex;
