--- a/css/styles.css
+++ b/css/styles.css
@@ -1533,4 +1533,19 @@ body .wrap {
   line-height: 2;
   color: #000000;
   letter-spacing: 0.3px;
+}
+
+.services-section {
+  max-width: 1200px !important;
+}
+.services-section .services-text-div {
+  text-align: center;
+  margin: 50px 30px;
+}
+.services-section .services-text-div h1 {
+  font-family: "Roboto";
+  font-weight: 900;
+  font-size: 32px;
+  line-height: 50px;
+  color: #333333;
 }/*# sourceMappingURL=styles.css.map */
